[package]
name = "codex-acp"
version = "0.5.0"
edition = "2024"
authors = ["Zed <hi@zed.dev>"]
license = "Apache-2.0"
description = "An ACP-compatible coding agent powered by Codex"
repository = "https://github.com/zed-industries/codex-acp"
homepage = "https://github.com/zed-industries/codex-acp"

[[bin]]
name = "codex-acp"
path = "src/main.rs"

[lib]
name = "codex_acp"
path = "src/lib.rs"

[dependencies]
agent-client-protocol = { version = "0.7.0", features = ["unstable"] }
anyhow = "1"
async-trait = "0.1"
mcp-types = { git = "https://github.com/sagemathinc/codex", rev = "c978e75246e57840195d1dec7a39607d4682ec5c", package = "mcp-types" }
codex-apply-patch = { git = "https://github.com/sagemathinc/codex", rev = "c978e75246e57840195d1dec7a39607d4682ec5c", package = "codex-apply-patch" }
codex-arg0 = { git = "https://github.com/sagemathinc/codex", rev = "c978e75246e57840195d1dec7a39607d4682ec5c", package = "codex-arg0" }
codex-common = { git = "https://github.com/sagemathinc/codex", rev = "c978e75246e57840195d1dec7a39607d4682ec5c", package = "codex-common", features = ["cli"] }
codex-core = { git = "https://github.com/sagemathinc/codex", rev = "c978e75246e57840195d1dec7a39607d4682ec5c", package = "codex-core" }
codex-mcp-server = { git = "https://github.com/sagemathinc/codex", rev = "c978e75246e57840195d1dec7a39607d4682ec5c", package = "codex-mcp-server" }
codex-protocol = { git = "https://github.com/sagemathinc/codex", rev = "c978e75246e57840195d1dec7a39607d4682ec5c", package = "codex-protocol" }
codex-login = { git = "https://github.com/sagemathinc/codex", rev = "c978e75246e57840195d1dec7a39607d4682ec5c", package = "codex-login" }
codex-utils-string = { git = "https://github.com/sagemathinc/codex", rev = "c978e75246e57840195d1dec7a39607d4682ec5c", package = "codex-utils-string" }
itertools = "0.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex-lite = "0.1.8"
shlex = "1.3.0"
clap = "4.5.53"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
shell-escape = "0.1.5"

[lints.rust]
let-underscore = "warn"
rust-2018-idioms = "warn"
unused = "warn"

[patch.crates-io]
rmcp = { git = "https://github.com/bolinfest/rust-sdk", branch = "pr556" }
